--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	
 	<center>	
-			<img src="imagen/aldo.jpg"  alt="aldo JPG" width="200" height="200">
+			<img src="aldo.jpg"  alt="aldo JPG" width="200" height="200">
 			<br>
 			<font aligh="center" size="7" color="black">Aldo Jesus Hernández Roque</font>
 	</center>
