--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 	<h3>Redes Sociales</h3>
 	<a href="https://www.facebook.com/aldo.hernandezroque">Facebook</a>
 	</center>
-	<a href="https://aldoroque.github.io/">Volver</a>
+	<a href="https://aldoroque.github.io">Volver</a>
 
 
 
