--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<a href="https://aldoroque.github.io">Volver</a>
 	<center>	
-			<img src="https://github.com/aldoroque/maquetado/blob/gh-page/aldo.jpg"  alt="aldo JPG" width="200" height="200">
+			<img src="aldo.jpg"  alt="https://github.com/aldoroque/maquetado/blob/gh-page/aldo.jpg" width="200" height="200">
 			<br>
 			<font aligh="center" size="7" color="black">Aldo Jesus Hernández Roque</font>
 	</center>
