--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<a href="https://aldoroque.github.io">Volver</a>
+	<a href="https://drive.google.com/file/d/1YgqJtzvyDPnnoWPXh6RRZeR61ieqbjqW/view?usp=sharing">Descargar CV</a>
 	<center>	
 			<img src="aldo.jpg"  alt="https://github.com/aldoroque/maquetado/blob/gh-page/aldo.jpg" width="200" height="200">
 			<br>
